--- a/INTEGRATION-PROJECT-main/RegistryService/pom.xml
+++ b/INTEGRATION-PROJECT-main/RegistryService/pom.xml
@@ -59,6 +59,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>registry-service</finalName>
     </build>
     <repositories>
         <repository>
