fix docker network issues, add bootstrap.yml file, update docker compose file, remove logstash related configs from code supplier service temporarily

--- a/INTEGRATION-PROJECT-main/APIGateway/Dockerfile
+++ b/INTEGRATION-PROJECT-main/APIGateway/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:11
 MAINTAINER sagorsarker
 WORKDIR /app
+EXPOSE 8081
 COPY ./target/api-gateway.jar /app
 CMD ["java", "-jar", "api-gateway.jar"]
