--- a/INTEGRATION-PROJECT-main/ConfigService/src/main/resources/application.properties
+++ b/INTEGRATION-PROJECT-main/ConfigService/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8888
+spring.application.name=Config-Server
 
-spring.application.name= Config-Server
+#spring.cloud.config.server.git.uri=https://github.com/siamaktavakoli/EventTrackerConfigRepo
+spring.cloud.config.server.git.uri=https://github.com/sagor1155/swaconfigrepo
 
-spring.cloud.config.server.git.uri=https://github.com/rbari/cs590-project-config-server.git
-
+EUREKA_HOST=localhost
+eureka.instance.hostname=Config-Server
 eureka.client.register-with-eureka= true
 eureka.client.fetch-registry= true
-eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone= http://${EUREKA_HOST}:8761/eureka/
