--- a/INTEGRATION-PROJECT-main/RegistryService/Dockerfile
+++ b/INTEGRATION-PROJECT-main/RegistryService/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:17-ea-jdk-oracle
 MAINTAINER sagorsarker
 WORKDIR /app
+EXPOSE 8761
 COPY ./target/registry-service.jar /app
 CMD ["java", "-jar", "registry-service.jar"]
