--- a/INTEGRATION-PROJECT-main/RegistryService/src/main/resources/application.properties
+++ b/INTEGRATION-PROJECT-main/RegistryService/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8761
 
-eureka.instance.hostname=registry
-eureka.instance.appname= Registry-Service
-
 eureka.environment=dev
 
+eureka.instance.hostname=Registry-Service
+eureka.instance.appname=Registry-Service
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+#spring.cloud.config.discovery.enabled=true
