--- a/INTEGRATION-PROJECT-main/APIGateway/src/main/resources/application.properties
+++ b/INTEGRATION-PROJECT-main/APIGateway/src/main/resources/application.properties
@@ -1,22 +1,9 @@
-#server.port=8081
-#
-#spring.config.import=configserver:http://localhost:8888
-#
-#spring.cloud.config.enabled=true
-#spring.cloud.config.name=Api-Gateway
-#spring.cloud.config.allow-override=true
-##spring.cloud.config.discovery.enabled=true
-#
-#spring.application.name=Api-Gateway
-#management.endpoints.web.exposure.include=*
-
-#### FOR TESTING
 spring.application.name=Api-Gateway
 server.port=8081
 
-spring.config.import=optional:configserver:http://localhost:8888
-
 # eureka client config
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+EUREKA_HOST=localhost
+eureka.instance.hostname=Api-Gateway
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_HOST}:8761/eureka
 
 management.endpoints.web.exposure.include=*
