--- a/INTEGRATION-PROJECT-main/CodeSupplierService/pom.xml
+++ b/INTEGRATION-PROJECT-main/CodeSupplierService/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>1.18.30</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -92,6 +92,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>code-supplier-service</finalName>
 	</build>
 	<repositories>
 		<repository>
