--- a/INTEGRATION-PROJECT-main/CodeSupplierService/src/main/resources/application.properties
+++ b/INTEGRATION-PROJECT-main/CodeSupplierService/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=8085
-spring.application.name= Code-Supplier-Service
-spring.config.import= configserver:http://localhost:8888
-spring.cloud.config.name= Code-Supplier-Service
+spring.application.name=Code-Supplier-Service
+spring.cloud.config.name=Code-Supplier-Service
 management.endpoints.web.exposure.include=*
 
 #Below two lines added to test registry service
-eureka.client.register-with-eureka= true
-eureka.client.fetch-registry= true
-eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+EUREKA_HOST=localhost
+eureka.instance.hostname=Code-Supplier-Service
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://${EUREKA_HOST}:8761/eureka/
