--- a/INTEGRATION-PROJECT-main/WDFS/src/main/resources/application.properties
+++ b/INTEGRATION-PROJECT-main/WDFS/src/main/resources/application.properties
@@ -1,16 +1,21 @@
+# Configuration for a Spring application
 
+# Configure the server port
+server.port=8081
 
-
+# Kafka configuration
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id= gid
-spring.kafka.consumer.auto-offset-reset= earliest
-spring.kafka.consumer.key-deserializer=  org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=  org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.producer.key-serializer=  org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=  org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.group-id=gid
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-app.topic.newApiTopic= NEWAPI
-app.topic.disAllowedApiTopic= DisallowedAPIs
+# Application-specific topics
+app.topic.newApiTopic=NEWAPI
+app.topic.disAllowedApiTopic=DisallowedAPIs
 
-#logging.level.root= ERROR  org.springframework= ERROR
-
+# Logging configuration (uncomment these lines to set logging levels)
+#logging.level.root=ERROR
+#logging.level.org.springframework=ERROR
