--- a/INTEGRATION-PROJECT-main/ReportingServices/ReportingService/src/main/resources/application.properties
+++ b/INTEGRATION-PROJECT-main/ReportingServices/ReportingService/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 server.port=8385
-
-spring.config.import= configserver:http://localhost:8888
-
-spring.cloud.config.enabled= true
-spring.cloud.config.name= Reporting-Service
-spring.cloud.config.allow-override= false
-spring.cloud.config.discovery.enabled= true
+CONFIG_HOST=localhost
+spring.config.import=configserver:http://${CONFIG_HOST}:8888
 
 spring.application.name= Reporting-Service
+
+
+#Below two lines added to test registry service
+EUREKA_HOST=localhost
+eureka.instance.hostname=Reporting-Service
+eureka.client.serviceUrl.defaultZone=http://${EUREKA_HOST}:8761/eureka
 management.endpoints.web.exposure.include=*
+
+MONGO_HOST=localhost
+spring.data.mongodb.uri= mongodb://${MONGO_HOST}:27017/reporting_db
+
+spring.kafka.consumer.group-id= gid
+spring.kafka.consumer.auto-offset-reset= earliest
